adds commit activity to the api, can expand with stats etc, etc later
